--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   sqflite: ^2.3.0
   path_provider: ^2.1.1
   intl: ^0.18.1
+  csv: ^5.1.1
 
 dev_dependencies:
   build_runner: ^2.4.5
