--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   path_provider: ^2.1.1
   intl: ^0.18.1
   csv: ^5.1.1
+  usb_serial: ^0.5.1
+  # esc_pos_printer: ^4.1.0
+  # esc_pos_utils: ^1.1.0
+  thermal_printer: ^1.0.4
+  xml: ^6.5.0
 
 dev_dependencies:
   build_runner: ^2.4.5
