--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   stacked: ^3.4.0
   stacked_services: ^1.1.0
+  dio: ^5.4.0
+  pretty_dio_logger: ^1.3.1
+  get_it: ^7.6.4
   bluetooth_enable_fork: ^0.1.6
   flutter_bluetooth_serial_ble: ^0.5.0
   permission_handler: ^11.0.1
@@ -21,10 +24,12 @@ dependencies:
   intl: ^0.18.1
   csv: ^5.1.1
   usb_serial: ^0.5.1
-  # esc_pos_printer: ^4.1.0
-  # esc_pos_utils: ^1.1.0
-  thermal_printer: ^1.0.4
   xml: ^6.5.0
+  retrofit: ^4.0.3
+  file_picker: ^6.1.1
+  http: ^1.1.2
+  
+  
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -33,7 +38,27 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.4.1
   stacked_generator: ^1.3.3
+  retrofit_generator:
+
 
 flutter:
   uses-material-design: true
 
+
+  fonts:
+   - family: Poppins-Light
+     fonts:
+       - asset: assets/fonts/Poppins-Light.ttf
+   - family: Poppins-Medium
+     fonts:
+       - asset: assets/fonts/Poppins-Medium.ttf    
+   - family: Poppins-Regular
+     fonts:
+       - asset: assets/fonts/Poppins-Regular.ttf   
+   - family: Poppins-SemiBold
+     fonts:
+       - asset: assets/fonts/Poppins-SemiBold.ttf
+
+  assets:
+   - assets/images/
+  
